# kalem-v1

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.backend  Dockerfile.frontend  GEMINI.md  LICENCE  PROJECT_ANALYSIS_REPORT.md  README.md  docker-compose.yml  nginx.conf  nginx.frontend.conf
backend/: alembic.ini  pyproject.toml
backend/athena/: main.py
backend/athena/adapters/: __init__.py  arxiv.py  base.py  core.py  crossref.py  openalex.py  semantic.py
backend/athena/api/v2/routers/: __init__.py  collections.py  library.py  search.py  (+2 more)
backend/athena/core/: __init__.py  celery_app.py  config.py  database.py  exceptions.py  file_paths.py  logging.py  middleware.py
backend/athena/schemas/: __init__.py  error.py  library.py  search.py
backend/athena/services/: __init__.py  export.py  library.py  search.py  settings.py
backend/athena/tasks/: __init__.py  download_strategies.py  downloader.py
backend/migrations/: env.py
backend/migrations/versions/: 3c4a09dd9c21_add_user_settings_table.py  7245dcd6adc4_add_ezproxy_settings.py  74a35bd4d28c_create_initial_tables.py  8e16fefc38a1_add_updated_at_to_library_entries.py  add_pdf_url_to_papers.py  b89a4c5f7d23_add_error_message_to_library_entries.py  c4e8a1f9b302_fix_source_type_enum_uppercase.py  d7f2a3b8c901_add_collections.py  df9503a87ed7_initial.py  ea63d692364c_add_new_source_types.py  f13a1c9d0b77_add_search_vector_fts.py
backend/tests/: test_arxiv_retry_logic.py  test_downloader_proxy_resolution.py  test_pdf_path_resolution.py  test_search_runtime_provider_control.py  test_settings_helpers.py
(+74 files in other folders)
