[tool.poetry]
name = "athena"
version = "1.0.1"
description = "Kalem v1.0.1 - Kasghar - Modular Monolith Backend"
authors = ["Your Name <your.email@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
greenlet = "^3.0.0"
asyncpg = "^0.29.0"
pydantic-settings = "^2.1.0"
redis = "^5.0.1"
aio-pika = "^9.4.0"
loguru = "^0.7.2"
alembic = "^1.13.0"
httpx = "^0.27.0"
celery = {extras = ["redis"], version = "^5.3.0"}
aiofiles = "^23.2.0"
psycopg2-binary = "^2.9.9"
pandas = "^2.2.0"
openpyxl = "^3.1.0"
feedparser = "^6.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.1.0"
isort = "^5.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
